force-app/main/default/objects/Material_Repuesto__c/Material_Repuesto__c.object-meta.xml
<CustomObject>
    <label>Material Repuesto</label>
    <nameField>
        <label># Partida</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materiales Repuestos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>