force-app/main/default/objects/Material_Repuesto__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Materiales Repuestos</relationshipLabel>
    <relationshipName>Materiales_Repuestos</relationshipName>
    <type>Lookup</type>
</CustomField>