force-app/main/default/objects/Material_Repuesto__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Materiales Repuestos</relationshipLabel>
    <relationshipName>Materiales_Repuestos</relationshipName>
    <type>Lookup</type>
</CustomField>